Expose two target preference divider color
For dark theme, see:
https://imgur.com/a/dAYiqtz

Change-Id: I329c5dbd8d36797b2c9bd36e622394ab48653498

--- a/core/res/res/values/discovery_colors.xml
+++ b/core/res/res/values/discovery_colors.xml
@@ -78,4 +78,7 @@
     <!-- App permission tint -->
     <color name="app_permission_icon_tint">@android:color/black</color>
 
+    <!-- Two target preference vertical divider color -->
+    <color name="list_divider_dark">#64000000</color>
+
 </resources>
