--- a/core/res/res/values/discovery_config.xml
+++ b/core/res/res/values/discovery_config.xml
@@ -106,5 +106,9 @@
         <item>org.telegram.plus</item>
         <item>org.thunderdog.challegram</item>
     </string-array>
+
+    <!-- Full screen aspect ratio -->
+    <bool name="config_haveHigherAspectRatioScreen">false</bool>
+    <item name="config_screenAspectRatio" format="float" type="dimen">2.1</item>
     
 </resources>
