--- a/core/res/res/values/discovery_symbols.xml
+++ b/core/res/res/values/discovery_symbols.xml
@@ -106,5 +106,9 @@
 
   <!-- Sensor block-per package -->
   <java-symbol type="array" name="config_blockPackagesSensorDrain" />
+
+  <!-- Full screen aspect ratio -->
+  <java-symbol type="bool" name="config_haveHigherAspectRatioScreen" />
+  <java-symbol type="dimen" name="config_screenAspectRatio" />
   
 </resources>
