--- a/packages/SystemUI/res/drawable/volte.xml
+++ b/packages/SystemUI/res/drawable/volte.xml
@@ -1,50 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:viewportWidth="28"
-    android:viewportHeight="24"
     android:width="28dp"
-    android:height="24dp">
-  <group
-      android:scaleX="4.381413"
-      android:scaleY="5.44208"
-      android:translateX="-1.501231"
-      android:translateY="-1648.221">
-    <group
-        android:scaleX="0.1288949"
-        android:scaleY="0.1034333"
-        android:translateX="-107.6397"
-        android:translateY="246.5987">
-      <group
-          android:translateX="31.33237"
-          android:translateY="1.666935">
-        <group
-            android:scaleX="1.770721"
-            android:scaleY="1.776538"
-            android:translateX="805.3544"
-            android:translateY="543.1622">
-          <path
-              android:pathData="M16.847656 5.5507812c-1.239433 0 -2.24414 1.0008975 -2.24414 2.2363282l0 7.4863286c0 1.23538 -1.004708 2.238281 -2.244141 2.238281l14.671875 0c0.631421 0 1.142578 -0.509319 1.142578 -1.138672l0 -9.6835939c0 -0.6293531 -0.511214 -1.1386212 -1.142578 -1.1386719zM15.289062 7.875l0.765626 0 0 6.355469 2.876953 0 0 0.851562 -3.642579 0zm2.986329 0l4.878906 0 0 0.8515625 -2.056641 0 0 6.3554685 -0.765625 0 0 -6.3554685 -2.05664 0zm5.660156 0l3.794922 0 0 0.8515625 -3.029297 0 0 1.9746095 3.029297 0 0 0.853516 -3.029297 0 0 2.675781 3.029297 0 0 0.851562 -3.794922 0z"
-              android:fillColor="#ffffff" />
-        </group>
-        <path
-            android:pathData="M853.22008 552.26396l-4.6462 0 0 1.51771 4.6462 0c0.69741 0 1.26478 0.56736 1.26478 1.26478l0 17.20129c0 0.69741 -0.56737 1.26477 -1.26478 1.26477l-22.51275 0c0.78379 -0.84499 1.2642 -1.97507 1.2642 -3.21563l0 -13.29957c0 -1.77307 1.44256 -3.21564 3.21563 -3.21564l4.98861 0 0 -1.51771 -30.97061 0c-1.53427 0 -2.78258 1.24831 -2.78258 2.78259l0 17.20128c0 1.53428 1.24831 2.78259 2.78258 2.78259l5.27796 0 0 -1.51771 -5.27796 0c-0.69741 0 -1.26477 -0.56736 -1.26477 -1.26478l0 -17.20138c0 -0.69742 0.56736 -1.26478 1.26477 -1.26478l22.51285 0c-0.78379 0.84499 -1.2642 1.97507 -1.2642 3.21564l0 13.29956c0 1.77307 -1.44256 3.21564 -3.21563 3.21564l-7.64521 0 0 1.51771 33.62721 0c1.53427 0 2.78258 -1.24831 2.78258 -2.78258l0 -17.20119c-0.00009 -1.53428 -1.24841 -2.78259 -2.78268 -2.78259z"
-            android:fillColor="#ffffff" />
-        <path
-            android:pathData="M840.09998 552.26398l5.41608 0 0 1.51771 -5.41608 0z"
-            android:fillColor="#ffffff" />
-        <path
-            android:pathData="M845.28522 552.26398l3.32203 0 0 1.51771 -3.32203 0z"
-            android:fillColor="#ffffff" />
-        <path
-            android:pathData="M813.98767 573.51263l6.04949 0 0 1.51772 -6.04949 0z"
-            android:fillColor="#ffffff" />
-        <path
-            android:pathData="M819.84644 557.71913l-4.40801 12.10985 -2.14708 0 -4.40802 -12.10985 1.72417 0 3.79805 10.65407 3.79805 -10.65407 1.64284 0z"
-            android:fillColor="#ffffff" />
-        <path
-            android:pathData="M828.49169 565.29084q0 2.22027 -1.13861 3.50526 -1.1386 1.285 -3.04982 1.285 -1.92749 0 -3.0661 -1.285 -1.13047 -1.28499 -1.13047 -3.50526 0 -2.22028 1.13047 -3.50527 1.13861 -1.29313 3.0661 -1.29313 1.91122 0 3.04982 1.29313 1.13861 1.28499 1.13861 3.50527zm-1.57778 0q0 -1.76484 -0.6913 -2.61879 -0.69129 -0.86208 -1.91935 -0.86208 -1.24433 0 -1.93563 0.86208 -0.68316 0.85395 -0.68316 2.61879 0 1.7079 0.6913 2.59438 0.69129 0.87835 1.92749 0.87835 1.21993 0 1.91122 -0.87021 0.69943 -0.87835 0.69943 -2.60252z"
-            android:fillColor="#ffffff" />
-      </group>
-    </group>
-  </group>
+    android:height="24dp"
+    android:viewportWidth="28"
+    android:viewportHeight="24">
+
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M25.51,6.73h-23A2.45,2.45,0,0,0,.06,9.16v5.68a2.45,2.45,0,0,0,2.43,2.43h23a2.45,2.45,0,0,0,2.43-2.43V9.16A2.45,2.45,0,0,0,25.51,6.73ZM7.15,10a1.54,1.54,0,0,1-.05
+.17 c0,.05,0,.11-.07 .17 L5.81,13.64c0,.13-.09 .25 -.13 .36 a1.68,1.68,0,0,1-.15
+.3 .66 .66 ,0,0,1-.23 .21 .62 .62 ,0,0,1-.35 .08 .6 .6 ,0,0,1-.35-.08 .52
+.52,0,0,1-.23-.21,1.46,1.46,0,0,1-.16-.3c0-.12-.09-.23-.13-.36l-1.2-3.28-.07-.18A1.21,1.21,0,0,1,2.76,10a.5
+.5 ,0,0,1,0-.17 .43 .43,0,0,1,.14-.32 .47 .47,0,0,1,.35-.15 .42 .42,0,0,1,.37
+.16 ,2,2,0,0,1,.23 .52 L5,13.43,6.12,10c.06-.18 .11 -.3 .14 -.37a.45 .45
+,0,0,1,.14-.19 .5 .5,0,0,1,.29-.09 .55 .55,0,0,1,.24 .07 .46 .46 ,0,0,1,.17 .17
+.38 .38 ,0,0,1,.07 .22 A1,1,0,0,1,7.15,10Zm4.12,3.3h0a2,2,0,0,1-.38 .61
+,1.73,1.73,0,0,1-.6 .39 ,2,2,0,0,1-.77 .13
+,1.82,1.82,0,0,1-.77-.14,1.65,1.65,0,0,1-1-1,2,2,0,0,1-.13-.77,2.06,2.06,0,0,1,.13-.78,1.61,1.61,0,0,1,.38-.61,1.69,1.69,0,0,1,.59-.39,2.26,2.26,0,0,1,1.54,0,1.67,1.67,0,0,1,1,1A2.45,2.45,0,0,1,11.27,13.29Zm.6-1.76h-.19A1.69,1.69,0,0,0,10,9.84V9.68a.24
+.24 ,0,0,1,.23-.23h0a2.06,2.06,0,0,1,1.81,1.81A.23 .23
+,0,0,1,11.87,11.53ZM13,11.11h-.19a2.37,2.37,0,0,0-2.37-2.37V8.57a.23 .23
+,0,0,1,.23-.23h0a2.78,2.78,0,0,1,2.51,2.52A.23 .23
+,0,0,1,13,11.11Zm4.26,3.29a.26 .26 ,0,0,1-.32 .16 h0a4.33,4.33,0,0,1-2.72-5.49
+.26 .26,0,0,1,.32-.16l.84 .29 a.24 .24 ,0,0,1,.16 .32 ,2.8,2.8,0,0,0-.15 .91 .25
+.25 ,0,0,1-.14 .22 l-.71 .36 a3.88,3.88,0,0,0,1,2.12l.71-.35a.26 .26
+,0,0,1,.27,0,2.84,2.84,0,0,0,.81 .42 .25 .25 ,0,0,1,.16 .32 Zm4-4.24a.62 .62
+,0,0,1-.39 .11 H19.73V14a.69 .69 ,0,0,1-.14 .47 .46 .46 ,0,0,1-.37 .15 .48 .48
+,0,0,1-.37-.15 .71 .71,0,0,1-.14-.47V10.27H17.59a.62 .62 ,0,0,1-.39-.11 .44
+.44,0,0,1-.13-.31 .41 .41,0,0,1,.14-.31 .54 .54,0,0,1,.38-.11h3.26a.54 .54
+,0,0,1,.39 .11 .43 .43 ,0,0,1,0,.62Zm4.52,4.21a.5 .5 ,0,0,1-.37 .11 H22.61a.71
+.71 ,0,0,1-.48-.14 .66 .66,0,0,1-.15-.48V10.05a.92 .92 ,0,0,1,.07-.36 .39
+.39,0,0,1,.2-.2 .76 .76,0,0,1,.36-.06h2.71a.53 .53 ,0,0,1,.36 .1 .41 .41
+,0,0,1,0,.58 .53 .53,0,0,1-.36 .11 H23v1.24h2.12a.49 .49 ,0,0,1,.35 .1 .39 .39
+,0,0,1,.12 .28 .36 .36 ,0,0,1-.12 .28 .45 .45 ,0,0,1-.35 .11 H23v1.44h2.38a.54
+.54 ,0,0,1,.37 .11 .42 .42 ,0,0,1,0,.59Z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M9.52,11.29a.82 .82 ,0,0,0-.81 .57 ,1.85,1.85,0,0,0,0,1.29,1,1,0,0,0,.33 .43 .76
+.76 ,0,0,0,.49 .14 .81 .81
+,0,0,0,.68-.32,1.41,1.41,0,0,0,.25-.89,1.4,1.4,0,0,0-.25-.9A.84 .84
+,0,0,0,9.52,11.29Z" />
 </vector>
