Add a slight tint to the power menu when wallpaper tint is off
I know the title of this commit doesn't really make sense when you first read it
but without a slight tint on the power menu when the power menu is off, the text
'Rebooting...' or 'Rebooting into Recovery...' can sometimes be hard to read.

So to solve this issue, reported by @DJDarkknight96, a slight tint is applied.

This also exposes that tint to be themed by themers if they like, you know because
we're 'anti-theme' :p

Change-Id: I630c492faaaecae56fca5f128d846b45b9e0eca3

--- a/packages/SystemUI/res/values/discovery_colors.xml
+++ b/packages/SystemUI/res/values/discovery_colors.xml
@@ -34,4 +34,7 @@
     <color name="floating_action_button_icon_color">@android:color/white</color>
 
     <color name="powersave_warning_color">#ff8e0101</color><!-- rgb 142 1 1 -->
+
+    <!-- Power menu wallpaper tint off color -->
+    <color name="power_menu_wallpaper_tint_off_color">#80202020</color>
 </resources>
